--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       </dialog>
     </main>
 
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
   </body>
 </html>
